--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,10 @@
 body {
-  background: url("background.jpg");
+  background-image: url("background4.jpg");
+  width: 100%;
+  height: 100%;
+  position: absolute;
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
