--- a/client/src/styles/RecipeCreate.css
+++ b/client/src/styles/RecipeCreate.css
@@ -76,11 +76,10 @@
   margin-left: 10px;
   margin-right: 40%;
   color: rgb(248, 46, 46);
-  text-shadow: rgb(19, 19, 18) 0px 0px;
-  background-color: rgb(241, 240, 237);
+  background-color: rgb(19, 18, 18);
   width: 180px;
-  /* max-width: 220px; */
   float: right;
+  padding: 2px;
 }
 
 .instruction {
